filesystem/etc/iptables/ip6tables.rules
# Generated by ip6tables-save v1.6.0 on Tue Aug 30 21:47:31 2016
*mangle
:PREROUTING ACCEPT [1075:592944]
:INPUT ACCEPT [254:22320]
:FORWARD ACCEPT [821:570624]
:OUTPUT ACCEPT [159:22720]
:POSTROUTING ACCEPT [990:594724]
COMMIT
# Completed on Tue Aug 30 21:47:31 2016
# Generated by ip6tables-save v1.6.0 on Tue Aug 30 21:47:31 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i he-ipv6 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m rt --rt-type 0 -j DROP
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -d ff00::/8 -j ACCEPT
-A INPUT -m limit --limit 10/min --limit-burst 7 -j LOG --log-prefix "[FW INPUT]: "
-A FORWARD -p ipv6-icmp -j ACCEPT
-A FORWARD -i eth0 -o eth0 -j ACCEPT
-A FORWARD -m rt --rt-type 0 -j DROP
-A FORWARD -i eth0 -o he-ipv6 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -p ipv6-nonxt -m length --length 40 -j ACCEPT
-A FORWARD -m limit --limit 10/min --limit-burst 7 -j LOG --log-prefix "[FW FORWARD]: "
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o he-ipv6 -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -m rt --rt-type 0 -j DROP
-A OUTPUT -s fe80::/10 -j ACCEPT
-A OUTPUT -d ff00::/8 -j ACCEPT
-A OUTPUT -m limit --limit 10/min --limit-burst 7 -j LOG --log-prefix "[FW OUTPUT]: "
COMMIT
# Completed on Tue Aug 30 21:47:31 2016
